--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
     <style>
         body { font-family: Arial, sans-serif; }
-        #timeline { width: 100%; height: 400px; border: 1px solid lightgray; }
+        #timeline { width: 100%; height: 100%; border: 1px solid lightgray; }
         .controls { margin: 10px 0; text-align: center; }
         .control-button { margin: 5px; padding: 8px 16px; }
         #details { margin-top: 20px; }
