more notes to be added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 </head>
 <body>
     <h1>Imagining War: The Art and Literature of Conflict Timeline</h1>
+    <p> "Every war story, according to Leo Tolstoy, begins with the disclaimer that war cannot be understood by those who have not witnessed it for themselves – yet the story is always told anyway."
+        <br>
+        <br>
+    This tool provides details on war literature's themes (memorialization of past wars, anticipation of future ones), tropes (the soldier’s departure and homecoming, the horror of battle, eyewitnesses who did not fight), and narrative forms (poetry, novels, narrative journalism). Click an event or text on the timeline for more information, and related events or text will be highlighted yellow if there are related ones. MORE NOTES TO BE ADDED. </p>
     <div class="controls">
         <button id="filter-all" class="control-button">All</button>
         <button id="filter-events" class="control-button">Events</button>
