--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <!-- Basic Page Needs–––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagining War: The Art and Literature of Conflict Timeline</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Mobile Specific Metas–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- FONT–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+    <!-- CSS–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet"/>
+
     <style>
-        body { font-family: Arial, sans-serif; }
+        body { 
+            font-family: "Raleway", sans-serif;
+            padding: 20px;
+        }
+
         #timeline { width: 100%; height: 100%; border: 1px solid lightgray; }
         .controls { margin: 10px 0; text-align: center; }
         .control-button { margin: 5px; padding: 8px 16px; }
@@ -18,13 +35,7 @@
         .poetry { background-color: lightblue; }
         .news { background-color: lightgreen; }
         .other { background-color: lightyellow; }
-
         .highlight { border: 2px solid gold; }
-
-        #searchContainer {
-            text-align: center;
-            margin-bottom: 20px;
-        }
 
         #searchInput {
             padding: 8px;
@@ -32,31 +43,30 @@
             margin-right: 5px;
         }
 
-        #searchButton {
-            padding: 8px;
-        }
+        
     </style>
 </head>
+
 <body>
     <h1>Imagining War: The Art and Literature of Conflict Timeline</h1>
     <p> "Every war story, according to Leo Tolstoy, begins with the disclaimer that war cannot be understood by those who have not witnessed it for themselves – yet the story is always told anyway."
         <br>
         <br>
-    This tool provides details on war literature's themes (memorialization of past wars, anticipation of future ones), tropes (the soldier’s departure and homecoming, the horror of battle, eyewitnesses who did not fight), and narrative forms (poetry, novels, narrative journalism). Click an event/text on the timeline for more information, and related events or texts will be highlighted yellow if there are related ones. Currently under construction :) </p>
+    This tool compiles information on war literature's themes (memorialization of past wars, anticipation of future ones), tropes (the soldier’s departure/homecoming, the horror of battle, eyewitnesses who did not fight), and narrative forms (poetry, novels, narrative journalism). Click on the timeline for more information and to discover related events or texts. These, if any, will be highlighted yellow. This project is ongoing. </p>
 
     <div id="searchContainer" style="text-align:center; margin-bottom: 20px;">
-    <input type="text" id="searchInput" placeholder="type type some war lit stuff or history stuff..." style="padding: 8px; width: 20%;">
-    <button id="searchButton" style="padding: 8px;">Search</button>
+    <input type="text" id="searchInput" placeholder="type type some war lit stuff or history stuff..." style="padding: 8px; width: 25%;">
+    <button >Search</button>
     </div>
 
     <div class="controls">
-        <button id="filter-all" class="control-button">All</button>
-        <button id="filter-events" class="control-button">Events</button>
-        <button id="filter-film" class="control-button">Film</button>
-        <button id="filter-novel" class="control-button">Novel</button>
-        <button id="filter-poetry" class="control-button">Poetry</button>
-        <button id="filter-news" class="control-button">News</button>
-        <button id="filter-other" class="control-button">Other</button>
+        <button id="filter-all">All</button>
+        <button id="filter-events">Events</button>
+        <button id="filter-film">Film</button>
+        <button id="filter-novel">Novel</button>
+        <button id="filter-poetry">Poetry</button>
+        <button id="filter-news">News</button>
+        <button id="filter-other">Other</button>
     </div>
     <div id="timeline"></div>
     <div id="details">
@@ -66,4 +76,5 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
     <script type="text/javascript" src="./script.js"></script>
 </body>
+
 </html>
