--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             margin-right: 5px;
         }
 
-        
+        #foot {
+            padding-bottom: 30px !important;
+            padding-top: 30px !important;
+            font-size: 65%; }
+        }
     </style>
 </head>
 
@@ -55,7 +59,7 @@
     This tool compiles information on war literature's themes (memorialization of past wars, anticipation of future ones), tropes (the soldier’s departure/homecoming, the horror of battle, eyewitnesses who did not fight), and narrative forms (poetry, novels, narrative journalism). Click on the timeline for more information and to discover related events or texts. These, if any, will be highlighted yellow. This project is ongoing. </p>
 
     <div id="searchContainer" style="text-align:center; margin-bottom: 20px;">
-    <input type="text" id="searchInput" placeholder="type type some war lit stuff or history stuff..." style="padding: 8px; width: 25%;">
+    <input type="text" id="searchInput" placeholder="type type type literature stuff or history stuff..." style="padding: 8px; width: 25%;">
     <button >Search</button>
     </div>
 
@@ -76,5 +80,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
     <script type="text/javascript" src="./script.js"></script>
 </body>
+
+<footer id="foot"> This is a tool developed by CJ Hines for the course "Imagining War: The Art and Literature of Conflict" at the Pembroke Cambridge Summer Programme. All content belongs to Dr. Nathaniel Zetter and Pembroke College at the University of Cambridge. </footer>
 
 </html>
